[tool.poetry]
name = "cisco-config"
version = "0.1.0"
description = "Cisco configuration parser and generator"
authors = ["Tomáš Rottenberg <hacksparr0w@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
