[tool.poetry]
name = "cisco-config"
version = "0.1.0"
description = "Cisco configuration parser and generator"
authors = ["Tomáš Rottenberg <hacksparr0w@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
cisco_config = "cisco_config.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.1"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.12.0"

[[tool.mypy.overrides]]
module = "cisco_config.asa.*"
ignore_errors = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
